# AndroidLibraryBase

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidlibrarybase/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidlibrarybase/: CameraActivity.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidlibrarybase/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
librarybase/: CMakeLists.txt  build.gradle
librarybase/cpp/: MBCJniOnLoad.cpp
librarybase/cpp/android/: BaseJniOnLoad.cpp  ThreeDimensionalFilterJni.cpp  ThreeDimensionalFilterJni.h  ThreeDimensionalOneFrameDataJni.cpp  ThreeDimensionalOneFrameDataJni.h  ThreeDimensionalUtilsJni.cpp  ThreeDimensionalUtilsJni.h
librarybase/cpp/android/bitmap/: BitmapUtil.cpp  BitmapUtil.h
librarybase/cpp/android/librarybase/: LibraryBaseJni.cpp  LibraryBaseJni.h  LibraryBaseTestJni.cpp  LibraryBaseTestJni.h
librarybase/cpp/android/nativebitmap/: NativeBitmap.cpp  NativeBitmap.h  NativeBitmapJni.cpp  NativeBitmapJni.h
librarybase/cpp/android/threedimensional/: BaseGLUtils.cpp  BaseGLUtils.h  DepthFilter.cpp  DepthFilter.h  DilateFilter.cpp  DilateFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  PerspectiveFilter.cpp  PerspectiveFilter.h  ThreeDimensionalFilter.cpp  ThreeDimensionalFilter.h  ThreeDimensionalOneFrameData.h  ThreeDimensionalUtils.cpp  ThreeDimensionalUtils.h
librarybase/cpp/android/utils/: AndroidHelper.cpp  AndroidHelper.h  JniHelper.cpp  JniHelper.h
librarybase/cpp/common/common/: BaseDefine.h
librarybase/cpp/common/log/: BaseDefine.h  BaseLog.cpp  BaseLog.h
librarybase/java/com/example/librarybase/: LibraryBase.java  LibraryBaseTest.java
librarybase/java/com/example/librarybase/glutils/: GLUtils.java
librarybase/java/com/example/librarybase/nativebitmap/: NativeBitmap.java
librarybase/java/com/example/librarybase/number/: NumberItem.java  NumberRollFilter.java
librarybase/java/com/example/librarybase/opengl/: Base2DTexturePainter.java  Base3DPainter.java  BaseCamera.java  BaseDilateFilter.java  BaseGLUtils.java  BaseGaussianBlurFilter.java  BaseOESTexturePainter.java  BasePainter.java  BasePerspectiveFilter.java  BasePointPainter.java  BaseRectPainter.java  BaseTexturePainter.java
librarybase/java/com/example/librarybase/soloader/: BaseSoLoader.java
librarybase/java/com/example/librarybase/threedimensional/: BaseGLUtils.java  DepthFilter.java  DilateFilter.java  GaussianBlurFilter.java  PerspectiveFilter.java  ThreeDimensionalFilter.java  ThreeDimensionalOneFrameData.java  ThreeDimensionalUtils.java
